[package]
name = "gcal-imp"
version = "0.1.0"
edition = "2024"
authors = ["gcal-imp contributors"]

[dependencies]
chrono = { version = "0.4", features = ["serde"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.8"
tokio = { version = "1.35", features = ["full"] }
reqwest = { version = "0.11", features = ["json"] }
ratatui = "0.26"
crossterm = "0.27"
yup-oauth2 = "10.0"
google-calendar3 = "5.0"
rusqlite = { version = "0.31", features = ["bundled"] }
uuid = { version = "1.6", features = ["v4", "serde"] }
thiserror = "1.0"
anyhow = "1.0"
urlencoding = "2.1"
dirs = "5.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }
tracing-appender = "0.2"
regex = "1.10"
html2text = "0.12"
async-trait = "0.1"

[dev-dependencies]
tokio-test = "0.4"
mockall = "0.12"
wiremock = "0.6"
proptest = "1.4"
pretty_assertions = "1.4"
tempfile = "3.9"
